k8s/clusters/homelabrestore01/apps/authentik-database/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: restore-auth
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.31
