k8s/clusters/homelabrestore01/apps/authentik-database/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: restore-auth
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
